Fixyfix for media layout problem

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -200,7 +200,7 @@ div.articles a.feedburner {
 	width: 207px;
 	height: 220px;
 	border: 1px solid #ccc;
-	margin: 10px;
+	margin: 10px 10px 30px 10px;
 }
 
 .media li.body {
